# VulnClaw

./: README.md  README_EN.md  STREAMING_PLAN.md  pyproject.toml  version-manifest.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: web.ts
frontend/src/components/: AppShell.tsx  Sidebar.tsx
frontend/src/pages/: HomePage.tsx  RiskResultsPage.tsx
frontend/src/types/: api.ts
scripts/: test_stream.py
tests/: test_basic.py  test_release_workflow.py
vulnclaw/: __init__.py
vulnclaw/agent/: core.py  llm_client.py  loop_controller.py  stream_client.py  stream_events.py
vulnclaw/cli/: main.py  stream_display.py
vulnclaw/config/: schema.py
vulnclaw/skills/specialized/osint-recon/references/: recon-report-template.md
vulnclaw/web/: __init__.py  app.py  schemas.py  task_manager.py
vulnclaw/web/services/: task_service.py
